<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Player name"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/player_wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Wins"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/player_draws"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Draws (ties)"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/player_losses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Losses"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/create_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_button_label"
            android:contentDescription="@string/create_button_label_a11y"
            android:layout_weight="1" />
        <Button
            android:id="@+id/read_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_button_label"
            android:contentDescription="@string/create_button_label_a11y"
            android:layout_weight="1" />
        <Button
            android:id="@+id/update_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_button_label"
            android:contentDescription="@string/create_button_label_a11y"
            android:layout_weight="1" />
        <Button
            android:id="@+id/delete_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_button_label"
            android:contentDescription="@string/delete_button_label_a11y"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:shrinkColumns="*"
            android:stretchColumns="*" >
        </TableLayout>
    </ScrollView>

</LinearLayout>